@@ -2,7 +2,35 @@ package Xchat::Embed;
 use strict;
 use warnings;
 # list of loaded scripts keyed by their package names
+# The package names are generated from the filename of the script using
+# the file2pkg() function.
+# The values of this hash are hash references with the following keys:
+#   filename
+#     The full path to the script.
+#   gui_entry
+#     This is xchat_plugin pointer that is used to remove the script from
+#     Plugins and Scripts window when a script is unloaded. This has also
+#     been converted with the PTR2IV() macro.
+#   hooks
+#     This is an array of hooks that are associated with this script.
+#     These are pointers that have been converted with the PTR2IV() macro.
+#   inner_packages
+#     Other packages that are defined in a script. This is not recommended
+#     partly because these will also get removed when a script is unloaded.
+#   loaded_at
+#     A timestamp of when the script was loaded. The value is whatever
+#     Time::HiRes::time() returns. This is used to retain load order when
+#     using the RELOADALL command.
+#   shutdown
+#     This is either a code ref or undef. It will be executed just before a
+#     script is unloaded.
 our %scripts;
+
+# used to keep track of which package a hook belongs to, if the normal way of
+# checking which script is calling a hook function fails this will be used
+# instead. When a hook is created this will be copied to the HookData structure
+# and when a callback is invoked this it will be used to set this value.
+our $current_package;
 
 sub load {
 	my $file = expand_homedir( shift @_ );
@@ -28,27 +56,6 @@ sub load {
 		# we shouldn't care about things after __END__
 		$source =~ s/^__END__.*//ms;
 		
-		if(
-			my @replacements = $source =~
-				m/^\s*package ((?:[^\W:]+(?:::)?)+)\s*?;/mg
-		) {
-			
-			if ( @replacements > 1 ) {
-				Xchat::print(
-					"Too many package defintions, only 1 is allowed\n"
-				);
-				return 1;
-			}
-			
-			my $original_package = shift @replacements;
-			
-			# remove original package declaration
-			$source =~ s/^(package $original_package\s*;)/#$1/m;
-			
-			# fixes things up for code calling subs with fully qualified names
-			$source =~ s/${original_package}:://g;
-		}
-		
 		# this must come before the eval or the filename will not be found in
 		# Xchat::register
 		$scripts{$package}{filename} = $file;
@@ -72,6 +79,13 @@ sub load {
 					"", "unknown", "", $file
 				);
 		}
+
+		# this must be done before the error check so the unload will remove
+		# any inner packages defined by the script. if a script fails to load
+		# then any inner packages need to be removed as well.
+		my @inner_packages = $source =~
+			m/^\s*package ((?:[^\W:]+(?:::)?)+)\s*?;/mg;
+		$scripts{$package}{inner_packages} = [ @inner_packages ];
 		
 		if( $@ ) {
 			# something went wrong
@@ -125,6 +139,9 @@ sub unload {
 			plugingui_remove( $pkg_info->{gui_entry} );
 		}
 		
+		for my $inner_package ( @{$pkg_info->{inner_packages}} ) {
+			Symbol::delete_package( $inner_package );
+		}
 		Symbol::delete_package( $package );
 		delete $scripts{$package};
 		return Xchat::EAT_ALL;
@@ -203,16 +220,6 @@ sub pkg_info {
 	return $scripts{$package};
 }
 
-sub find_external_pkg {
-	my $level = 1;
-
-	while( my @frame = caller( $level ) ) {
-		return @frame if $frame[0] !~ /^Xchat/;
-		$level++;
-	}
-
-}
-
 sub find_pkg {
 	my $level = 1;
 
@@ -221,18 +228,7 @@ sub find_pkg {
 		$level++;
 	}
 
-	my @frame = find_external_pkg();
-	my $location;
-
-	if( $frame[0] or $frame[1] ) {
-		$location = $frame[1] ? $frame[1] : "package $frame[0]";
-		$location .= " line $frame[2]";
-	} else {
-		$location = "unknown location";
-	}
-
-	die "Unable to determine which script this hook belongs to. at $location\n";
-
+	return get_current_package();
 }
 
 sub fix_callback {
@@ -248,6 +244,17 @@ sub fix_callback {
 	}
 	
 	return $callback;
+}
+
+sub get_current_package {
+	return $current_package;
+}
+
+sub set_current_package {
+	my $old_package = $current_package;
+	$current_package = shift;
+
+	return $old_package;
 }
 
 1
